--- a/docker/Makefile
+++ b/docker/Makefile
@@ -3,6 +3,5 @@ build-psql:
 build-base:
 	docker build -t gortc/pontoon-base -f Dockerfile.base .
 build-web:
-	docker build -t gortc/pontoon-web -f Dockerfile .
+	docker build -t gortc/pontoon -f Dockerfile .
 build: build-base build-psql build-web
-
