--- a/templates/webapp.env
+++ b/templates/webapp.env
@@ -6,3 +6,5 @@ MANUAL_SYNC=True
 SESSION_COOKIE_SECURE=False
 SITE_URL=https://{{ fqdn }}
 DJANGO_LOGIN=true
+BROKER_URL=amqp://guest@rabbit:5672//
+RABBITMQ_URL=amqp://guest@rabbit:5672//
