--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,8 +8,11 @@ RUN DEBIAN_FRONTEND=noninteractive /tmp/set_up_ubuntu.sh
 RUN useradd --shell /bin/bash -c "" -m app
 
 # st-l10n fork.
+ENV PONTOON_VER "v0.1.10"
+
 RUN git clone https://github.com/st-l10n/pontoon.git /app
 WORKDIR /app
+RUN git checkout tags/$PONTOON_VER
 
 RUN pip install -U 'pip>=8' && \
     pip install --no-cache-dir --require-hashes -r /app/requirements-dev.txt
