--- a/templates/webapp.env
+++ b/templates/webapp.env
@@ -8,3 +8,6 @@ SITE_URL=https://{{ fqdn }}
 DJANGO_LOGIN=true
 BROKER_URL=amqp://guest@rabbit:5672//
 RABBITMQ_URL=amqp://guest@rabbit:5672//
+CELERY_ALWAYS_EAGER=False
+GITHUB_CLIENT_ID={{ github_client_id }}
+GITHUB_SECRET_KEY={{ github_secret_key }}
