--- a/templates/webapp.env
+++ b/templates/webapp.env
@@ -5,7 +5,7 @@ DATABASE_URL=postgres://pontoon:asdf@postgresql/pontoon?sslmode=allow
 MANUAL_SYNC=True
 SESSION_COOKIE_SECURE=False
 SITE_URL=https://{{ fqdn }}
-DJANGO_LOGIN=true
+DJANGO_LOGIN=False
 BROKER_URL=amqp://guest@rabbit:5672//
 RABBITMQ_URL=amqp://guest@rabbit:5672//
 CELERY_ALWAYS_EAGER=False
