--- a/templates/webapp.env
+++ b/templates/webapp.env
@@ -9,5 +9,5 @@ DJANGO_LOGIN=False
 BROKER_URL=amqp://guest@rabbit:5672//
 RABBITMQ_URL=amqp://guest@rabbit:5672//
 CELERY_ALWAYS_EAGER=False
-GITHUB_CLIENT_ID={{ github_client_id }}
-GITHUB_SECRET_KEY={{ github_secret_key }}
+DISCORD_CLIENT_ID={{ discord_client_id }}
+DISCORD_SECRET_KEY={{ discord_secret_key }}
