add volumes, ssh keys and machine translation api

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -6,3 +6,6 @@ cert_dir: "{{ lego_dir }}/certificates"
 nginx_conf_template: "{{ playbook_dir }}/templates/nginx.conf.j2"
 nginx_acme_dir: /storage/lego/acme/
 lego_server: https://acme-v02.api.letsencrypt.org/directory
+
+postgres_user: 999
+app_user: 715
