--- a/templates/webapp.env
+++ b/templates/webapp.env
@@ -11,3 +11,5 @@ RABBITMQ_URL=amqp://guest@rabbit:5672//
 CELERY_ALWAYS_EAGER=False
 DISCORD_CLIENT_ID={{ discord_client_id }}
 DISCORD_SECRET_KEY={{ discord_secret_key }}
+MICROSOFT_TRANSLATOR_API_KEY={{ microsoft_translator_api_key }}
+MICROSOFT_TRANSLATOR_API_VERSION=3.0
