add teamcity and steam fetch automation

--- a/templates/lego.service
+++ b/templates/lego.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 ExecStartPost=/bin/systemctl reload nginx.service
-ExecStart=/usr/local/bin/lego -a -s {{ lego_server }} -d={{ fqdn }} -m={{ lego_email }} --dns cloudflare --path=/storage/lego/ renew
+ExecStart=/usr/local/bin/lego -a -s {{ lego_server }} -d={{ item }} -m={{ lego_email }} --dns cloudflare --path=/storage/lego/ renew
 Type=simple
 Restart=on-failure
 RestartSec=10s
