--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -9,3 +9,21 @@ lego_server: https://acme-v02.api.letsencrypt.org/directory
 
 postgres_user: 999
 app_user: 715
+
+domains:
+- tc.{{ root_domain}}
+- "{{ root_domain }}"
+
+nginx_client_max_body_size: 0
+nginx_extra_http_options: |
+  proxy_read_timeout     1200;
+  proxy_connect_timeout  240;
+  map $http_upgrade $connection_upgrade {
+      default upgrade;
+      '' '';
+  }
+
+# Steam default config
+steam_appid: 544550
+steam_user: ernado
+steam_branch: beta
