update sync service and script

--- a/templates/game-sync.service
+++ b/templates/game-sync.service
@@ -7,7 +7,7 @@ Wants=network-online.target
 ExecStart=/home/stationeers/update-game.sh
 Type=simple
 Restart=on-failure
-RestartSec=10s
+RestartSec=10m
 User=stationeers
 Group=stationeers
 WorkingDirectory=/home/stationeers
